attributed fact expressions (concerning background theory, declared
hyps).  Potential INCOMPATIBILITY, tools need to observe standard
context discipline.  See also Assumption.add_assumes and the more
primitive Thm.assume_hyps.

* Inner syntax token language allows regular quoted strings "..."
(only makes sense in practice, if outer syntax is delimited
differently).


*** HOL ***

* Command and antiquotation ''value'' are hardcoded against nbe and
ML now.  Minor INCOMPATIBILITY.

* Separate command ''approximate'' for approximative computation
in Decision_Procs/Approximation.  Minor INCOMPATIBILITY.

* Adjustion of INF and SUP operations:
  * Elongated constants INFI and SUPR to INFIMUM and SUPREMUM.
  * Consolidated theorem names containing INFI and SUPR: have INF
  and SUP instead uniformly.
  * More aggressive normalization of expressions involving INF and Inf
  or SUP and Sup.
  * INF_image and SUP_image do not unfold composition.
  * Dropped facts INF_comp, SUP_comp.
  * Default congruence rules strong_INF_cong and strong_SUP_cong,
  with simplifier implication in premises.  Generalize and replace
  former INT_cong, SUP_cong
INCOMPATIBILITY.

* Swapped orientation of facts image_comp and vimage_comp:
  image_compose ~> image_comp [symmetric]
  image_comp ~> image_comp [symmetric]
  vimage_compose ~> vimage_comp [symmetric]
  vimage_comp ~> vimage_comp [symmetric]
  INCOMPATIBILITY.

* Simplifier: Enhanced solver of preconditions of rewrite rules
  can now deal with conjunctions.
  For help with converting proofs, the old behaviour of the simplifier
  can be restored like this:  declare/using [[simp_legacy_precond]]
  This configuration option will disappear again in the future.

* HOL-Word:
  * Abandoned fact collection "word_arith_alts", which is a
  duplicate of "word_arith_wis".
  * Dropped first (duplicated) element in fact collections
  "sint_word_ariths", "word_arith_alts", "uint_word_ariths",
  "uint_word_arith_bintrs".
